--- a/src/assets/styles/catalogo.scss
+++ b/src/assets/styles/catalogo.scss
@@ -1,6 +1,7 @@
 //Variables
 $backgroundImage: linear-gradient(to top, #e2afa1 0%, #f2bf97 100%);
 $secondBackgroundImage: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+$cardBackgroundImage: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 //$brandColor: #09e668;
 $sm: 12px;
 $md: 18px;
@@ -95,4 +96,420 @@ body{
     font-family: $afacadFont;
     justify-content: flex-start;
     align-items: flex-start
+}
+
+//Nav
+nav{
+    @include sizes($height: 120px);
+    @include displayFlex();
+    position: fixed;
+    top:0px;
+    background-color: $lightFontColor;
+    z-index: 10000;
+    gap: 20px;
+    box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
+
+    .topNav{
+        @include sizes(80%);
+        @include displayFlex($flexDirection:row);
+        background-color: $lightFontColor;
+        cursor: default;
+        border-bottom-left-radius: 80px;
+        border-bottom-right-radius: 80px;
+        gap: 20px;
+        box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
+
+        img{
+            @include sizes(25px,auto);
+        }
+        p{
+            font-weight: $bold;
+            font-size: 2.5vw;
+            color: $darkFontColor;
+        }
+    }
+    header{
+        @include displayFlex();
+        @include sizes($height: 50px);
+        
+        .mobileHeader{
+            @include sizes();
+            @include displayFlex($flexDirection:row,$justifyContent: space-between);
+            padding-left: 25px;
+            padding-right: 50px;
+
+            #myLogo{
+                @include sizes(50px,auto);
+                cursor: pointer;
+            }
+            img{
+                @include sizes(30px, auto);
+                cursor: pointer;
+                transition: all 0.3s ease;
+            }
+            img:hover{
+                transform: scale(1.05)
+            }
+            ul{
+                @include sizes(25%,50px);
+                @include displayFlex($flexDirection:row);
+                gap: 15px;
+
+                .contactSpan{
+                    cursor: pointer;
+                }
+                li{
+                    @include sizes(100px,80px);
+                    @include displayFlex();
+                    list-style: none;
+                    transition: all 0.3s ease;
+
+                    #catalogoImg:hover{
+                        transform: none;
+                    }
+                }
+                #catalogo:hover{
+                    transform: scale(1.05);
+                }
+            }
+        }
+    }
+}
+
+//Menu hamburguesa
+.burguerMenu{
+    @include displayFlex($justifyContent: space-between);
+    @include sizes(250px);
+    position: fixed;
+    display: none;
+    z-index: 11000;
+    background-color: $lightFontColor;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    box-shadow: 0px 0px 50px 10px $shadow;
+    overflow: hidden;
+    gap: 20px;
+    background-image: $secondBackgroundImage;
+ 
+
+    div{
+        @include sizes(90%,$height:50px);
+        @include displayFlex($flexDirection:row,$justifyContent:space-between);
+        align-items: flex-end;
+
+        #adminAccess{
+             @include sizes(40px,auto);
+        }
+        img{
+            @include sizes(50px,auto);
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        img:hover{
+            transform: scale(1.05);
+        }
+    }
+    img{
+        @include sizes(150px,auto);
+    }
+    ul{
+        @include sizes();
+        @include displayFlex();
+        gap: 10px;
+
+        li{ 
+            @include sizes($height:40px);
+            @include displayFlex($flexDirection: row, $justifyContent: space-between);
+            list-style: none;
+            padding: 10px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            backdrop-filter: blur(5px);
+
+            img{
+                @include sizes(30px,auto);
+            }
+        }
+        li:hover{
+            padding-right: 20px;
+            font-weight: $bold;
+        }
+    }
+    .socialMedia{
+        width: 90%;
+        @include displayFlex($flexDirection:row);
+        gap: 10px;
+
+        p{
+            color: $secondBackgroundImage;
+            background-color: transparent;
+            font-weight: $bold;
+            font-size: $md;
+            cursor: default;
+        }
+    }
+    p{
+        @include sizes($height:40px);
+        @include displayFlex();
+        background-color: $secondBackgroundImage;
+        color: $darkFontColor;
+        font-size: $sm;
+
+        a{
+            cursor: pointer;
+            text-decoration: none;
+            color: $darkFontColor;
+            font-weight: $bold;
+        }
+    }
+}
+
+//Main
+main{
+    @include sizes();
+    @include displayFlex();
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 120px;
+    
+    //Contenedor de categorias
+    #categorySection{
+    @include sizes($height: 900px);
+    @include displayFlex();
+    padding: 5px;
+    cursor: default;
+    transform: translateX(2500px);
+    animation: sideIn 1s ease forwards;
+    gap: 30px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    
+    h2{
+        @include sizes($height: 30px);
+        padding-left: 10px;
+    }
+            .links{
+            @include sizes($height: 50%);
+            @include displayFlex();
+
+            img{
+                @include sizes(40%,auto);
+            }
+            p{
+                @include sizes();
+                @include displayFlex();
+            }
+        }
+        .links{
+            flex-wrap: wrap;
+            justify-content: space-around;
+            flex-direction: row;
+            gap: 15px;
+
+            div{
+                @include sizes(130px,120px);
+                @include displayFlex();
+                border-radius: 100%;
+                padding: 10px;
+                background-image: $cardBackgroundImage;
+                transition: all 0.3s ease;
+                cursor: pointer;
+                gap: 10px;
+
+                span{
+                    @include sizes($height: 35px);
+                    @include displayFlex();
+                    background-image: $secondBackgroundImage;
+                    margin-top: -40px;
+                    border-radius: 5px;
+                    box-shadow: 0px 0px 10px 1px $shadow;
+                }
+                img{
+                    @include sizes(60%,auto);
+                }
+            }
+            div:hover{
+                transform: scale(1.03);
+            }
+        }
+        .scrollSection{
+            @include sizes($height: 200px);
+            @include displayFlex();
+            gap: 10px;
+
+            h3{
+                @include sizes($height: 30px);
+                @include displayFlex();
+            }
+            img{
+                @include sizes(25%,auto);
+                transform: rotate(-90deg)
+            }
+        }
+    }
+
+    //Contenedor de categorias
+    #categoriesSection{
+        @include sizes();
+        @include displayFlex();
+        justify-content: flex-start;
+
+        div{
+            @include sizes($height: 700px);
+            @include displayFlex($justifyContent:space-between);
+        }
+        .firstCategory, .secondCategory, .thirdCategory, .fourthCategory,
+        .fifthCategory, .sixthCategory, .seventhCategory, .eigthCategory, .ninethCategory{
+            background-image: url(/src/assets/img/categories/bolsosCategory.jpeg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            cursor: default;
+
+            div{
+                @include sizes(100%,40px);
+                @include displayFlex();
+                margin-top: 100px;
+                align-items: flex-start;
+
+                h3{
+                    @include sizes(40%);
+                    @include displayFlex();
+                    align-items: flex-start;
+                    padding-left: 10px;
+                    font-size: 4vw;
+                    font-weight: $noBold;
+                    border-top-right-radius: 15px;
+                    border-bottom-right-radius: 15px;
+                    background-color: $lightFontColor;
+                    
+                }
+            }
+        }
+        .secondCategory{
+            background-image: url(/src/assets/img/categories/pantalonesJeansCategory.jpeg);
+        }
+        .thirdCategory{
+            background-image: url(/src/assets/img/categories/blusasTopsCategory.jpeg);
+        }
+        .fourthCategory{
+            background-image: url(/src/assets/img/categories/tenisCategory.jpeg);
+        }
+        .fifthCategory{
+            background-image: url(/src/assets/img/categories/vestidosCategory.jpeg);
+        }
+        .toBriefcaseSection{
+            @include sizes(100%,250px);
+            @include displayFlex();
+            gap: 5px;
+            background-image: url(/src/assets/img/backgroundOpacity.png);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            
+            button{
+                @include buttonDesign(50%);
+                box-shadow: none;
+            }
+            button:hover{
+                transform: scale(1.05);
+            }
+        }
+        .sixthCategory{
+            background-image: url(/src/assets/img/categories/ropaDeportivaCategory.jpeg);
+        }
+        .seventhCategory{
+            background-image: url(/src/assets/img/categories/hoodiesSueterCategory.jpeg);
+        }
+        .eigthCategory{
+            background-image: url(/src/assets/img/categories/zapatosTaconesCategory.jpeg);
+        }
+        .ninethCategory{
+            background-image: url(/src/assets/img/categories/abrigosCategory.jpeg);
+        }
+        #buttonSection{
+            @include sizes(100%,80px);
+            @include displayFlex($flexDirection:row);
+            gap: 10px;
+            padding: 20px;
+
+            button{
+                @include buttonDesign($width: 250px);
+                margin-bottom: 25px;
+            }
+            button:hover{
+                transform: scale(1.02)
+            }
+        }
+    }
+
+    //Whatsapp logo
+    #whatsapp{
+        @include sizes(60px,auto);
+        cursor: pointer;
+        position: fixed;
+        left: 20px;
+        bottom: 20px;
+        transition: all 0.3s ease;
+        z-index: 10000;
+    }
+    #whatsapp:hover{
+        transform: scale(1.05);
+    }
+}
+
+//Footer
+footer{
+    @include sizes($height: 300px);
+    @include displayFlex($flexDirection:row, $justifyContent:space-around);
+
+    img{
+        @include sizes(30%,auto);
+    }
+    div{
+        @include sizes();
+        @include displayFlex();
+        gap: 10px;
+        cursor: default;
+
+        img{
+            cursor: pointer;
+            @include sizes(30%,auto);
+            transition: all 0.3s ease;
+        }
+        img:hover{
+            transform: scale(1.05);
+        }
+        ul{
+            @include sizes();
+            @include displayFlex();
+            align-items: flex-start;
+
+            li{
+                list-style: none;
+            }
+        }
+    }
+}
+
+//Animaciones
+@keyframes zoomAnimation {
+    100%{transform: scale(1)};
+}
+@keyframes fadeIn {
+    100%{opacity: 1};
+}
+@keyframes sideIn {
+    100%{transform: translateX(0px);}
+}
+@keyframes sideOut {
+    100%{transform: translateX(-2500px);}
+}
+@keyframes carrouselControllers {
+    0%{transform: rotate(0deg) scale(1)}
+    49%{transform: rotate(0deg) scale(1)}
+    50%{transform: rotate(-15deg) scale(1.02)}
+    60%{transform: rotate(15deg) scale(1.02)}
+    70%{transform: rotate(-15deg) scale(1.02)}
+    100%{transform: rotate(0deg) scale(1)}
 }
