--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -6,7 +6,7 @@
 
 html {
   width: 100%;
-  height: 7000px;
+  height: 8000px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -247,6 +247,84 @@ main {
   align-items: flex-start;
   margin-top: 120px;
 }
+main #presentation {
+  width: 100%;
+  height: 900px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+  cursor: default;
+  transform: translateX(2500px);
+  animation: sideIn 0.5s ease forwards;
+  gap: 15px;
+}
+main #presentation h2 {
+  width: 100%;
+  height: 30px;
+  margin-bottom: 15px;
+  padding-left: 10px;
+}
+main #presentation .textPresentation, main #presentation .links {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+main #presentation .textPresentation img, main #presentation .links img {
+  width: 40%;
+  height: auto;
+}
+main #presentation .textPresentation p, main #presentation .links p {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+main #presentation .links {
+  flex-wrap: wrap;
+  justify-content: space-around;
+  flex-direction: row;
+  gap: 15px;
+}
+main #presentation .links div {
+  width: 130px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 100%;
+  padding: 10px;
+  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+  transition: all 0.3s ease;
+  cursor: pointer;
+  gap: 10px;
+}
+main #presentation .links div span {
+  width: 100%;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  margin-top: -40px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 1px #414141;
+}
+main #presentation .links div img {
+  width: 60%;
+  height: auto;
+}
+main #presentation .links div:hover {
+  transform: scale(1.03);
+}
 main #categoriesSection {
   width: 100%;
   height: 100%;
@@ -485,96 +563,4 @@ footer div ul li {
   100% {
     transform: rotate(0deg) scale(1);
   }
-}
-/*  #presentation{
-     @include sizes(95%,$height: 80%);
-     @include displayFlex($flexDirection:row, $justifyContent: space-between);
-     background-image: url(/src/assets/img/presentationBackground.png);
-     padding: 25px;
-     cursor: default;
-     transform: translateX(2500px);
-     animation: sideIn 1s ease forwards;
-
-     .presentationImg{
-         @include displayFlex();
-         @include sizes(40%,100%);
-         gap: 25px;
-         opacity: 0;
-         animation: fadeIn 0.5s ease forwards;
-
-         .imgs{
-             @include sizes(80%,90%);
-             @include displayFlex();
-             overflow: hidden;
-             backdrop-filter: blur(3px);
-             box-shadow: 0px 0px 10px 1px $shadow;
-
-             #firstImage, #secondImage, #thirdImage{
-                 @include sizes();
-             }
-             #secondImage, #thirdImage{
-                 display: none;
-             }
-         }
-         .carrouselController{
-             @include sizes(20%,10%);
-             @include displayFlex($flexDirection:row);
-             gap: 25px;
-             backdrop-filter: blur(3px);
-             box-shadow: 0px 0px 10px 1px $shadow;
-             border-radius: 10px;
-             margin-top: -50px;
-             animation: carrouselControllers 5s ease infinite;
-             animation-delay: 5s;
-
-             img{
-                 @include sizes(50px,auto);
-                 cursor: pointer;
-                 transition: all 0.3s ease;
-             }
-             #leftArrow{
-                 transform: rotate(0deg)
-             }
-             #rightArrow{
-                 transform: rotate(180deg)
-             }
-         }
-         .carrouselController:hover{
-             animation-play-state: paused;
-         }
-     }
-     //Texto y links para redireccionar al cliente
-     .linksAndText{
-         @include sizes(60%,60%);
-         @include displayFlex();
-
-         p{
-             @include sizes(70%,40%);
-             @include displayFlex();
-             text-align: center;
-             font-size: $lg;
-             padding: 5px;
-             color: $darkFontColor;
-             backdrop-filter: blur(10px);
-             transition: all 0.3s ease;
-             border-radius: 10px;
-             box-shadow: 0px 0px 10px 1px $shadow;
-             transform: scale(0.00001);
-             animation: zoomAnimation 0.5s ease forwards;
-         }
-         p:hover{
-             transform: scale(1.02)
-         }
-         .pageRedirections{
-             @include sizes(70%,20%);
-             @include displayFlex($justifyContent: space-between, $flexDirection:row);
-             gap: 10px;
-
-             button{
-                 @include buttonDesign(100%);
-                 transform: scale(0.00001);
-                 animation: zoomAnimation 0.5s ease forwards;
-             }
-         }
-     }
- } *//*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
