--- a/src/views/catalogo.html
+++ b/src/views/catalogo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Baúl de Severina - Catálogo</title>
     <!--CSS-->
-    <link rel="stylesheet" href="/src/assets/styles/styles.css">
+    <link rel="stylesheet" href="/src/assets/styles/catalogo.css">
     <!--FAVICON-->
     <link rel="shortcut icon" href="/src/assets/img/logos/logo.png" type="image/x-icon">
     <!--GOOGLE FONTS-->
@@ -49,23 +49,45 @@
     <!--MAIN / CONTENIDO PRINCIPAL-->
     <main>
         <img id="whatsapp" src="/src/assets/img/icons/whatsapp.png" alt="Whatsapp Icon">
+        <!--SECTION DE CATEGORIAS-->
         <section id="categorySection">
-            <h3>Escoge la categoría que deseas</h3>
-            <div>
-                <button id="bolsos">Bolsos</button>
-                <button id="bolsos">Bolsos</button>
-                <button id="bolsos">Bolsos</button>
-                <button id="bolsos">Bolsos</button>
-                <button id="bolsos">Bolsos</button>
-                <button id="bolsos">Bolsos</button>
-                <button id="bolsos">Bolsos</button>
-                <button id="bolsos">Bolsos</button>
-                <button id="bolsos">Bolsos</button>
+            <h2>Todas nuestras categorías</h2>
+            <div class="links">
+                <div><span>Bolsos</span><img src="/src/assets/img/icons/bolso.png" alt="Ícono de Categoria de Bolsos"></div>
+                <div><span>Jeans</span><img src="/src/assets/img/icons/jeans.png" alt="Ícono de Categoria de Pantalones y Jeans"></div>
+                <div><span>Blusas</span><img src="/src/assets/img/icons/blusa.png" alt="Ícono de Categoria de Blusas"></div>
+                <div><span>Tenis</span><img src="/src/assets/img/icons/zapatos.png" alt="Ícono de Categoria de Tenis"></div>
+                <div><span>Vestidos & Faldas</span><img src="/src/assets/img/icons/falda.png" alt="Ícono de Categoria de Vestidos y Faldas"></div>
+                <div><span>Ropa Deportiva</span><img src="/src/assets/img/icons/deportiva.png" alt="Ícono de Categoria de Ropa Deportiva"></div>
+                <div><span>Sueters</span><img src="/src/assets/img/icons/sueters.png" alt="Ícono de Categoria de Hoodies y Sueters"></div>
+                <div><span>Tacones</span><img src="/src/assets/img/icons/tacones.png" alt="Ícono de Categoria de Sandalias y Tacones"></div>
+                <div><span>Abrigos</span><img src="/src/assets/img/icons/abrigos.png" alt="Ícono de Categoria de Abrigos"></div>
+            </div>
+            <div class="scrollSection">
+                <h3>¡Desliza para descubrir por tu cuenta!</h3>
+                <img src="/src/assets/img/icons/scroll.png" alt="Ícono de Scroll para ver todo nuestro catálogo de indumentaria">
             </div>
         </section>
     </main>
     <!--FOOTER-->
-    <footer></footer>
+    <footer>
+        <img src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
+        <div class="socialMedia">
+            <h3>¡Síguenos!</h3>
+            <img src="/src/assets/img/icons/instagram.png" alt="Instagram Icon">
+            <img src="/src/assets/img/icons/facebook.png" alt="Facebook Icon">
+        </div>
+        <div>
+            <ul>
+                <span class="toCategories">Catálogo</span>
+                <span>Contacto</span>
+            </ul>
+            <ul>
+                <li>📱 +57 301 2397022</li>
+                <li>📍 Medellín, CO</li>
+            </ul>
+        </div>
+    </footer>
     <!--SCRIPTS-->
     <script type="module" src="/src/js/main.js"></script>
 </body>
