Botones del index.html listos

--- a/src/views/catalogo.html
+++ b/src/views/catalogo.html
@@ -21,9 +21,10 @@
         </div>
         <header>
             <div id="mobileHeader" class="mobileHeader">
-                <img id="myLogo" src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
+                <img id="toIndex" src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
                 <ul>
-                    <li id="contact"><span class="contactSpan">Contacto</span></li>
+                    <li id="toContact"><span class="contactSpan">Contacto</span></li>
+                    <li id="toBriefcase"><img id="catalogoImg" src="/src/assets/img/icons/catalogo.png" alt="Ícono catálogo de productos"></li>
                     <li><img id="menu" src="/src/assets/img/icons/menu.png" alt="Menu Icon"></li>
                 </ul>
             </div>
@@ -31,11 +32,11 @@
     </nav>
     <!--MENU HAMBURGUESA-->
     <div id="burguerMenu" class="burguerMenu">
-        <div><img id="adminAccess" src="/src/assets/img/icons/admin.png" alt="Admin Access Icon"><img id="closeMenu" src="/src/assets/img/icons/exit.png" alt="Icon to close Menu"></div>
+        <div><img id="toAdmin" src="/src/assets/img/icons/admin.png" alt="Admin Access Icon"><img id="closeMenu" src="/src/assets/img/icons/exit.png" alt="Icon to close Menu"></div>
         <img src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
         <ul>
+            <li id="toIndex">INICIO</li>
             <li id="toAboutUs">SOBRE NOSOTROS</li>
-            <li id="toBriefcase">CATÁLOGO</li>
             <li id="toHappyClients">CLIENTES FELICES</li>
             <li id="toContact">CONTACTO</li>
         </ul>
@@ -51,7 +52,7 @@
         <img id="whatsapp" src="/src/assets/img/icons/whatsapp.png" alt="Whatsapp Icon">
         <!--SECTION DE CATEGORIAS-->
         <section id="categorySection">
-            <h2>Todas nuestras categorías</h2>
+            <h2>Busca por categoría:</h2>
             <div class="links">
                 <div class="toCategory" data-id="bolsosCategory"><span>Bolsos</span><img src="/src/assets/img/icons/bolso.png" alt="Ícono de Categoria de Bolsos"></div>
                 <div class="toCategory" data-id="jeansCategory"><span>Jeans</span><img src="/src/assets/img/icons/jeans.png" alt="Ícono de Categoria de Pantalones y Jeans"></div>
@@ -70,39 +71,39 @@
         </section>
         <section id="bolsosCategory" class="category">
             <h2>Bolsos</h2>
-            <div id="bolsosProducts"></div>
+            <div id="bolsosProducts"><span>Aún no hay productos</span></div>
         </section>
         <section id="jeansCategory" class="category">
             <h2>Pantalones & Jeans</h2>
-            <div id="jeansProducts"></div>
+            <div id="jeansProducts"><span>Aún no hay productos</span></div>
         </section>
         <section id="blusasCategory" class="category">
             <h2>Blusas</h2>
-            <div id="blusasProducts"></div>
+            <div id="blusasProducts"><span>Aún no hay productos</span></div>
         </section>
         <section id="tenisCategory" class="category">
             <h2>Tenis</h2>
-            <div id="tenisProducts"></div>
+            <div id="tenisProducts"><span>Aún no hay productos</span></div>
         </section>
         <section id="vestidosCategory" class="category">
             <h2>Vestidos & Faldas</h2>
-            <div id="vestidosProducts"></div>
+            <div id="vestidosProducts"><span>Aún no hay productos</span></div>
         </section>
         <section id="deportivaCategory" class="category">
             <h2>Ropa Deportiva</h2>
-            <div id="deportivaProducts"></div>
+            <div id="deportivaProducts"><span>Aún no hay productos</span></div>
         </section>
         <section id="suetersCategory" class="category">
             <h2>Hoodies & Sueters</h2>
-            <div id="suetersProducts"></div>
+            <div id="suetersProducts"><span>Aún no hay productos</span></div>
         </section>
         <section id="taconesCategory" class="category">
             <h2>Sandalias & Tacones</h2>
-            <div id="taconesProducts"></div>
+            <div id="taconesProducts"><span>Aún no hay productos</span></div>
         </section>
         <section id="abrigosCategory" class="category">
             <h2>Chaquetas & Abrigos</h2>
-            <div id="abrigosProducts"></div>
+            <div id="abrigosProducts"><span>Aún no hay productos</span></div>
         </section>
     </main>
     <!--FOOTER-->
@@ -115,7 +116,7 @@
         </div>
         <div>
             <ul>
-                <span class="toCategories">Catálogo</span>
+                <span class="toIndex">Inicio</span>
                 <span>Contacto</span>
             </ul>
             <ul>
