--- a/src/views/severinaInfo.html
+++ b/src/views/severinaInfo.html
@@ -21,10 +21,10 @@
         </div>
         <header>
             <div id="mobileHeader" class="mobileHeader">
-                <img id="myLogo" src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
+                <img id="toIndex" src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
                 <ul>
-                    <li id="contact"><span class="contactSpan">Contacto</span></li>
-                    <li id="catalogo"><img id="catalogoImg" src="/src/assets/img/icons/catalogo.png" alt="Ícono catálogo de productos"></li>
+                    <li id="toContact"><span class="contactSpan">Contacto</span></li>
+                    <li id="toBriefcase"><img id="catalogoImg" src="/src/assets/img/icons/catalogo.png" alt="Ícono catálogo de productos"></li>
                     <li><img id="menu" src="/src/assets/img/icons/menu.png" alt="Menu Icon"></li>
                 </ul>
             </div>
