--- a/src/views/catalogo.html
+++ b/src/views/catalogo.html
@@ -24,7 +24,6 @@
                 <img id="toIndex" src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
                 <ul>
                     <li id="toContact"><span class="contactSpan">Contacto</span></li>
-                    <li id="toBriefcase"><img id="catalogoImg" src="/src/assets/img/icons/catalogo.png" alt="Ícono catálogo de productos"></li>
                     <li><img id="menu" src="/src/assets/img/icons/menu.png" alt="Menu Icon"></li>
                 </ul>
             </div>
@@ -116,8 +115,8 @@
         </div>
         <div>
             <ul>
-                <span class="toIndex">Inicio</span>
-                <span>Contacto</span>
+                <span id="toIndex">Inicio</span>
+                <span id="toContact">Contacto</span>
             </ul>
             <ul>
                 <li>📱 +57 301 2397022</li>
