--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -275,7 +275,7 @@ main{
     //Contenedor de presentación
     #presentation{
     @include sizes($height: 900px);
-    @include displayFlex($justifyContent: space-between);
+    @include displayFlex();
     padding: 15px;
     cursor: default;
     transform: translateX(2500px);
@@ -283,9 +283,23 @@ main{
     gap: 15px;
     
     h2{
-        @include sizes($height: 30px);
+        @include sizes(40%,$height: 30px);
         margin-bottom: 15px;
-        padding-left: 10px;
+        padding: 20px;
+        @include displayFlex($flexDirection:row, $justifyContent: space-between);
+        border-radius: 20px;
+        border: 1px solid $darkFontColor;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        gap: 5px;
+
+        img{
+            @include sizes(30px,auto);
+        }
+    }
+    h2:hover{
+        transform: translateY(-5px);
+        background-image: $secondBackgroundImage;
     }
         .textPresentation, .links{
             @include sizes($height: 50%);
